objects/PPS_Field_And_Type_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>B2B_Portal_Quote_Products_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Portal Quote (Products/Config Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Portal_Quote_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check, If this field is required for B2B Portal Quote (Products/Configuration exist/New) Request For</inlineHelpText>
        <label>B2B Portal Quote Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Portal_Set_Up_new__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Portal Set-Up (new)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Portal_Update_Products_Configuratio__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Update Offering</inlineHelpText>
        <label>B2B Portal Update (Products/Configuratio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuration only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used for escalation form</description>
        <inlineHelpText>Request for is Escalation then Check this.</inlineHelpText>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label_Name__c</fullName>
        <label>Field Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Section_Name__c</fullName>
        <label>Form Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Quote_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check, If this field is required for Manual Quote (for new/existing products) Request For</inlineHelpText>
        <label>Manual Quote Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check, If this field is required for Special Pricing Escalation Request For</inlineHelpText>
        <label>Pricing Escalation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check, If this field is required for Special Pricing Request For</inlineHelpText>
        <label>Special Pricing Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_only_New_OPG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Pricing only (New OPG)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Offering_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check, If this field is required for Update Offering Request For</inlineHelpText>
        <label>Update Offering Required</label>
        <type>Checkbox</type>
    </fields>
    <label>PPS Field and Type Mapping</label>
</CustomObject>